--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -450,10 +450,10 @@
       </div>
     </div>
 
-    <h3 style="margin-top: 25px; font-size: 18px;">All Shifts</h3>
+    <h3 style="margin-top: 25px; font-size: 18px;">Upcoming Shifts</h3>
     
     <div id="player-shifts" class="shifts-scroll">
-      <div class="no-data">Loading shifts...</div>
+      <div class="no-data">Loading scheduled shifts...</div>
     </div>
   </div>
 
